fix white bar at the bottom on mobile

--- a/src/styles/styles.css
+++ b/src/styles/styles.css
@@ -3,6 +3,7 @@ html, body, #root {
   margin: 0;
   padding: 0;
   min-height: 100dvh;
+  background-color: #000;
 }
 
 * {
@@ -20,7 +21,7 @@ section:last-of-type {
   flex-flow: column nowrap;
   justify-content: center;
   align-items: center;
-  background-color: black;
+  background-color: #000;
   gap: 32px;
 }
 
